--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+.react-countdown-clock {
+  margin: 0 40%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
